# AoC2021

./: README.md
01/: 01.cpp
02/: 02.cpp
03/: 03.cpp
04/: 04.cpp
05/: 05.cpp
06/: 06.cpp
07/: 07.cpp
08/: 08.cpp
1/: 1.cpp
2/: .2.cpp.swp  2.cpp
3/: 3.cpp
4/: 4.cpp
src/: CMakeLists.txt  main.cpp
src/01/: 01.cpp  01.hpp  01_tests.cpp
src/02/: 02.cpp  02.hpp  02_tests.cpp
src/03/: 03.cpp  03.hpp  03_tests.cpp
src/04/: 04.cpp  04.hpp  04_tests.cpp
src/05/: 05.cpp  05.hpp  05_tests.cpp
src/06/: 06.cpp  06.hpp  06_tests.cpp
src/07/: 07.cpp  07.hpp  07_tests.cpp
src/08/: 08.cpp  08.hpp  08_tests.cpp
src/09/: 09.cpp  09.hpp  09_tests.cpp
src/10/: 10.cpp  10.hpp  10_tests.cpp
src/11/: 11.cpp  11.hpp  11_tests.cpp
src/12/: 12.cpp  12.hpp  12_tests.cpp
src/13/: 13.cpp  13.hpp  13_tests.cpp
src/14/: 14.cpp  14.hpp  14_tests.cpp
src/15/: 15.cpp  15.hpp  15_tests.cpp
src/16/: 16.cpp  16.hpp  16_tests.cpp
src/17/: 17.cpp  17.hpp  17_tests.cpp
src/18/: 18.cpp  18.hpp  18_tests.cpp
src/19/: 19.cpp  19.hpp  19_tests.cpp
src/20/: 20.cpp  20.hpp  20_tests.cpp
src/21/: 21.cpp  21.hpp  21_tests.cpp
src/22/: 22.cpp  22.hpp  22_tests.cpp
src/23/: 23.cpp  23.hpp  23_tests.cpp
src/24/: 24.cpp  24.hpp  24_tests.cpp
src/25/: 25.cpp  25.hpp  25_tests.cpp
src/common/: common.cpp  common.hpp
